{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 374,
  "lineage": "3472ca10-8c54-f0c9-a270-fe020dd12ade",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f20a5b9bc3baa710",
            "association_id": "eipassoc-082c04b6c76aeece0",
            "domain": "vpc",
            "id": "eipalloc-0f20a5b9bc3baa710",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a026f29fd84ed86e",
            "private_dns": "ip-10-0-1-115.ec2.internal",
            "private_ip": "10.0.1.115",
            "public_dns": "ec2-3-208-190-207.compute-1.amazonaws.com",
            "public_ip": "3.208.190.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip"
            },
            "tags_all": {
              "Name": "eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "privm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:248217947790:instance/i-053e31cb4ee625a66",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053e31cb4ee625a66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-028d41c89571fbc2c",
            "private_dns": "ip-10-0-2-184.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06cb62deb54823187",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-044cac9e019254096"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce273a260bf6c206",
            "tags": {
              "Name": "privm"
            },
            "tags_all": {
              "Name": "privm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-044cac9e019254096"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.subnet2",
            "aws_vpc.customvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "privmvpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:248217947790:instance/i-07d080400eaf5c04d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d080400eaf5c04d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0508e78df1100ab1a",
            "private_dns": "ip-172-0-0-130.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.0.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0979b550a14fcfefc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0820ca173fe3a94f8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04192febff111b508",
            "tags": {
              "Name": "privmvpc2"
            },
            "tags_all": {
              "Name": "privmvpc2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0820ca173fe3a94f8"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls2",
            "aws_subnet.subnetvpc2",
            "aws_vpc.customvpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pubvm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:248217947790:instance/i-05949edf1c01bb1e1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05949edf1c01bb1e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dbcea164c2c979ff",
            "private_dns": "ip-10-0-1-107.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.107",
            "public_ip": "54.198.10.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc3a6dd982fe1116",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-044cac9e019254096"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008c6782c7513c374",
            "tags": {
              "Name": "pubvm"
            },
            "tags_all": {
              "Name": "pubvm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-044cac9e019254096"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.subnet1",
            "aws_vpc.customvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:internet-gateway/igw-0527ef7c918a1b51a",
            "id": "igw-0527ef7c918a1b51a",
            "owner_id": "248217947790",
            "tags": {
              "Name": "Internet_Gateway"
            },
            "tags_all": {
              "Name": "Internet_Gateway"
            },
            "vpc_id": "vpc-0ecf14817917124f4"
          },
          "dependencies": [
            "aws_vpc.customvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f20a5b9bc3baa710",
            "connectivity_type": "public",
            "id": "nat-05a31ef50c2b2aecf",
            "network_interface_id": "eni-0a026f29fd84ed86e",
            "private_ip": "10.0.1.115",
            "public_ip": "3.208.190.207",
            "subnet_id": "subnet-008c6782c7513c374",
            "tags": {
              "Name": "natgateway"
            },
            "tags_all": {
              "Name": "natgateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.subnet1",
            "aws_vpc.customvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-Subnetvpc1-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:route-table/rtb-0a60594bce476e9fe",
            "id": "rtb-0a60594bce476e9fe",
            "owner_id": "248217947790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-067fa2aca1831241c"
              }
            ],
            "tags": {
              "Name": "Private-Subnetvpc1-RT"
            },
            "tags_all": {
              "Name": "Private-Subnetvpc1-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecf14817917124f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.customvpc1",
            "aws_vpc.customvpc2",
            "aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-Subnetvpc2-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:route-table/rtb-0d9138a4418d7d9d3",
            "id": "rtb-0d9138a4418d7d9d3",
            "owner_id": "248217947790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-067fa2aca1831241c"
              }
            ],
            "tags": {
              "Name": "Private-Subnetvpc2-RT"
            },
            "tags_all": {
              "Name": "Private-Subnetvpc2-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d60758d50a2b1374"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.customvpc1",
            "aws_vpc.customvpc2",
            "aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-Subnetvpc1-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:route-table/rtb-002bd5503f4cb32f2",
            "id": "rtb-002bd5503f4cb32f2",
            "owner_id": "248217947790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0527ef7c918a1b51a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Subnetvpc1-RT"
            },
            "tags_all": {
              "Name": "Public-Subnetvpc1-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecf14817917124f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_vpc.customvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d5635fc78a7b1f9",
            "route_table_id": "rtb-002bd5503f4cb32f2",
            "subnet_id": "subnet-008c6782c7513c374"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.Public-Subnetvpc1-RT",
            "aws_subnet.subnet1",
            "aws_vpc.customvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01467f6272c5f20fe",
            "route_table_id": "rtb-0a60594bce476e9fe",
            "subnet_id": "subnet-0ce273a260bf6c206"
          },
          "dependencies": [
            "aws_route_table.Private-Subnetvpc1-RT",
            "aws_subnet.subnet2",
            "aws_vpc.customvpc1",
            "aws_vpc.customvpc2",
            "aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-IG-Associationvpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8b0ffee8ede147a",
            "route_table_id": "rtb-0d9138a4418d7d9d3",
            "subnet_id": "subnet-04192febff111b508"
          },
          "dependencies": [
            "aws_route_table.Private-Subnetvpc2-RT",
            "aws_subnet.subnetvpc2",
            "aws_vpc.customvpc1",
            "aws_vpc.customvpc2",
            "aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:security-group/sg-044cac9e019254096",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044cac9e019254096",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "248217947790",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecf14817917124f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.customvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:security-group/sg-0820ca173fe3a94f8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0820ca173fe3a94f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls2",
            "name_prefix": "",
            "owner_id": "248217947790",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls2"
            },
            "tags_all": {
              "Name": "allow_tls2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d60758d50a2b1374"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.customvpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:subnet/subnet-008c6782c7513c374",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008c6782c7513c374",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248217947790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0ecf14817917124f4"
          },
          "dependencies": [
            "aws_vpc.customvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:subnet/subnet-0ce273a260bf6c206",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce273a260bf6c206",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248217947790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-0ecf14817917124f4"
          },
          "dependencies": [
            "aws_vpc.customvpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetvpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:subnet/subnet-04192febff111b508",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04192febff111b508",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248217947790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnetvpc2"
            },
            "tags_all": {
              "Name": "Private Subnetvpc2"
            },
            "vpc_id": "vpc-0d60758d50a2b1374"
          },
          "dependencies": [
            "aws_vpc.customvpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "customvpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:vpc/vpc-0ecf14817917124f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc8cc4f7a64de440",
            "default_route_table_id": "rtb-0b3fca42ec3c32ec2",
            "default_security_group_id": "sg-0d3431a211a936fb7",
            "dhcp_options_id": "dopt-0d6feb74c672dda5a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ecf14817917124f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b3fca42ec3c32ec2",
            "owner_id": "248217947790",
            "tags": {
              "Name": "customvpc1"
            },
            "tags_all": {
              "Name": "customvpc1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "customvpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248217947790:vpc/vpc-0d60758d50a2b1374",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/16",
            "default_network_acl_id": "acl-0b3d9d14ad41239e9",
            "default_route_table_id": "rtb-00cf00b2fb4cce1db",
            "default_security_group_id": "sg-05bac606381bf4f56",
            "dhcp_options_id": "dopt-0d6feb74c672dda5a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d60758d50a2b1374",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cf00b2fb4cce1db",
            "owner_id": "248217947790",
            "tags": {
              "Name": "customvpc2"
            },
            "tags_all": {
              "Name": "customvpc2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-067fa2aca1831241c",
            "peer_owner_id": "248217947790",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0d60758d50a2b1374",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-0ecf14817917124f4"
          },
          "dependencies": [
            "aws_vpc.customvpc1",
            "aws_vpc.customvpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peering_acceptance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-067fa2aca1831241c",
            "peer_owner_id": "248217947790",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0d60758d50a2b1374",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Side": "Accepter"
            },
            "tags_all": {
              "Side": "Accepter"
            },
            "vpc_id": "vpc-0ecf14817917124f4",
            "vpc_peering_connection_id": "pcx-067fa2aca1831241c"
          },
          "dependencies": [
            "aws_vpc.customvpc1",
            "aws_vpc.customvpc2",
            "aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "pcx-067fa2aca1831241c",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_peering_connection_id": "pcx-067fa2aca1831241c"
          },
          "dependencies": [
            "aws_vpc.customvpc1",
            "aws_vpc.customvpc2",
            "aws_vpc_peering_connection.vpc_peering"
          ]
        }
      ]
    }
  ]
}